exports[`arrayOfUsers should match the normalizr-arrayOfUsers-schema 1`] = `
Array [
  EntitySchema {
    "_getId": [Function],
    "_key": "users",
    "_mergeStrategy": [Function],
    "_processStrategy": [Function],
    "schema": Object {},
  },
]
`;

exports[`user schema should match the normalizr-user-schema 1`] = `
EntitySchema {
  "_getId": [Function],
  "_key": "users",
  "_mergeStrategy": [Function],
  "_processStrategy": [Function],
  "schema": Object {},
}
`;
